// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoPlayerControls renders correctly when isVideoPlaying is false 1`] = `
<div
  className="player-interface  "
>
  <div
    className="player-interface__progress-bar-container"
  >
    <div
      className="player-interface__progress-bar"
      style={
        Object {
          "width": "0%",
        }
      }
    />
  </div>
  <div
    className="player-interface__navigation-wrapper"
  >
    <button
      className="player-interface__navigation-control"
      onClick={[Function]}
    >
      <img
        alt="right"
        className="player-interface-navigation-icons"
        src="RW.svg"
      />
    </button>
    <button
      className="player-interface__navigation-control"
      onClick={[Function]}
    >
      <img
        alt="Play/Pause"
        className="player-interface-navigation-icons"
        src="Play.svg"
      />
    </button>
    <button
      className="player-interface__navigation-control"
      onClick={[Function]}
    >
      <img
        alt="left"
        className="player-interface-navigation-icons"
        src="FF.svg"
      />
    </button>
  </div>
</div>
`;

exports[`VideoPlayerControls renders correctly when isVideoPlaying is true 1`] = `
<div
  className="player-interface  "
>
  <div
    className="player-interface__progress-bar-container"
  >
    <div
      className="player-interface__progress-bar"
      style={
        Object {
          "width": "0%",
        }
      }
    />
  </div>
  <div
    className="player-interface__navigation-wrapper"
  >
    <button
      className="player-interface__navigation-control"
      onClick={[Function]}
    >
      <img
        alt="right"
        className="player-interface-navigation-icons"
        src="RW.svg"
      />
    </button>
    <button
      className="player-interface__navigation-control"
      onClick={[Function]}
    >
      <img
        alt="Play/Pause"
        className="player-interface-navigation-icons"
        src="Pause.svg"
      />
    </button>
    <button
      className="player-interface__navigation-control"
      onClick={[Function]}
    >
      <img
        alt="left"
        className="player-interface-navigation-icons"
        src="FF.svg"
      />
    </button>
  </div>
</div>
`;
